# Chess-engine-development

./: .gitignore  CMakeLists.txt  README.md  README.rm  chess-engine-dev.pro  main.cpp  util.h
BASE/: chess.h  variant.cpp  variant.h
UI/: Board.cpp  Board.h  Piece.cpp  Piece.h
